[tool.setuptools]
packages = []

[project]
name = "dap4-validator"
version = "0.1.0"
description = "Test suite for validating DAP4 XML (DMR) documents against a schema."
authors = [
    { name = "Miguel Angel Jimenez-Urias", email = "mjimenez@opendap.org" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

# Core dependencies only
dependencies = [
    "lxml>=4.9.3",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

